--- a/main.html
+++ b/main.html
@@ -604,91 +604,91 @@
     title: "CGL",
     sub: "Graduate Level Exam",
     tag: "Graduate",
-    img: "https://images.unsplash.com/photo-1523580846011-d3a5bc25702b?q=80&w=600",
+    img: "ssc.png",
     link: "ssc-combined-graduate-level-cgl-examination.html"
   },
   {
     title: "CHSL",
     sub: "12th Level Exam",
     tag: "12th Pass",
-    img: "https://images.unsplash.com/photo-1523050854058-8df90110c9f1?q=80&w=600",
+    img: "ssc.png",
     link: "ssc-combined-higher-secondary-level-chsl-examination.html"
   },
   {
     title: "MTS",
     sub: "10th Level Staff",
     tag: "10th Pass",
-    img: "https://images.unsplash.com/photo-1588072432836-e10032774350?q=80&w=600",
+    img: "ssc.png",
     link: "ssc-multi-tasking-staff-mts-examination.html"
   },
   {
     title: "GD",
     sub: "Constable Duty",
     tag: "Defence",
-    img: "https://images.unsplash.com/photo-1603878463782-42d1d3d8c7f6?q=80&w=600",
+    img: "ssc.png",
     link: "ssc-general-duty-gd-constable-examination.html"
   },
   {
     title: "JE",
     sub: "Junior Engineer",
     tag: "Technical",
-    img: "https://images.unsplash.com/photo-1581090700227-1e37b190418e?q=80&w=600",
+    img: "ssc.png",
     link: "ssc-junior-engineer-je-examination.html"
   },
   {
     title: "JHT",
     sub: "Hindi Translator",
     tag: "Language",
-    img: "https://images.unsplash.com/photo-1517430816045-df4b7de11d1d?q=80&w=600",
+    img: "ssc.png",
     link: "ssc-junior-hindi-translator-jht-examination.html"
   },
   {
     title: "Steno",
     sub: "Grade C & D",
     tag: "Clerical",
-    img: "https://images.unsplash.com/photo-1497032628192-86f99bcd76bc?q=80&w=600",
+    img: "ssc.png",
     link: "ssc-stenographer-grade-c-d-examination.html"
   },
   {
     title: "CPO SI",
     sub: "Sub-Inspector",
     tag: "Police",
-    img: "https://images.unsplash.com/photo-1599940824399-b87987ceb72a?q=80&w=600",
+    img: "ssc.png",
     link: "ssc-central-police-organisation-cpo-si-examination.html"
   },
   {
     title: "Selection",
     sub: "Various Posts",
     tag: "Multiple",
-    img: "https://images.unsplash.com/photo-1556761175-129418cb2dfe?q=80&w=600",
+    img: "ssc.png",
     link: "ssc-selection-post-examination.html"
   },
   {
     title: "DP Const.",
     sub: "Delhi Police",
     tag: "Police",
-    img: "https://images.unsplash.com/photo-1607227063002-677dc5fdf96f?q=80&w=600",
+    img: "ssc.png",
     link: "ssc-constable-executive-delhi-police-examination.html"
   },
   {
     title: "SA (IMD)",
     sub: "Scientific Asst.",
     tag: "Science",
-    img: "https://images.unsplash.com/photo-1581091215367-59ab6c33f8d8?q=80&w=600",
+    img: "ssc.png",
     link: "ssc-scientific-assistant-imd-examination.html"
   },
   {
     title: "Tradesman",
     sub: "Skilled Constable",
     tag: "Skilled",
-    img: "https://images.unsplash.com/photo-1503387762-592deb58ef4e?q=80&w=600",
+    img: "ssc.png",
     link: "ssc-constable-tradesman-examination.html"
   },
   {
     title: "Phase",
     sub: "Phase Exam",
     tag: "Multiple",
-    img: "https://images.unsplash.com/photo-1529070538774-1843cb3265df?q=80&w=600",
+    img: "ssc.png",
     link: "ssc-phase-examinations.html"
   }
 ],
