--- a/main.html
+++ b/main.html
@@ -696,39 +696,39 @@
 
 /* ===================== UPSC ===================== */
 
-{ title:"CSE", sub:"Civil Services", tag:"UPSC", img:"https://images.unsplash.com/photo-1524995997946-a1c2e315a42f?q=80&w=600", link:"upsc-ias-ips-ifos-ifs-iaas-icas-icls-idas-ides-iis-ipos-iptafs-irs-income-tax-irs-customer-indirect-tax-irts-iras-irps-irsse-itrs-rpf-aghqcs-danics-danips-pcs-pps.html" },
-{ title:"ESE", sub:"Engg Services", tag:"UPSC", img:"https://images.unsplash.com/photo-1581090700227-1e37b190418e?q=80&w=600", link:"upsc-ese-ies-engineering-services-exam.html" },
-{ title:"IFoS", sub:"Forest Service", tag:"UPSC", img:"https://images.unsplash.com/photo-1500530855697-b586d89ba3ee?q=80&w=600", link:"upsc-ias-ips-ifos-ifs-iaas-icas-icls-idas-ides-iis-ipos-iptafs-irs-income-tax-irs-customer-indirect-tax-irts-iras-irps-irsse-itrs-rpf-aghqcs-danics-danips-pcs-pps.html" },
-{ title:"CDS", sub:"Defence", tag:"UPSC", img:"https://images.unsplash.com/photo-1603878463782-42d1d3d8c7f6?q=80&w=600", link:"ups-cds-combined-defence-dervices.html" },
-{ title:"NDA/NA", sub:"Defence Acad.", tag:"UPSC", img:"https://images.unsplash.com/photo-1599940824399-b87987ceb72a?q=80&w=600", link:"upsc-nda-na-services.html" },
-{ title:"CMS", sub:"Medical", tag:"UPSC", img:"https://images.unsplash.com/photo-1588776814546-1ffcf47267a5?q=80&w=600", link:"upsc-cms-services.html" },
-{ title:"IES/ISS", sub:"Eco & Stats", tag:"UPSC", img:"https://images.unsplash.com/photo-1554224155-6726b3ff858f?q=80&w=600", link:"upsc-ies-iss-services.html" },
-{ title:"CAPF", sub:"Armed Police", tag:"UPSC", img:"https://images.unsplash.com/photo-1605460375648-278bcbd579a6?q=80&w=600", link:"upsc-capf-services.html" },
-{ title:"EPFO", sub:"EO / AO", tag:"UPSC", img:"https://images.unsplash.com/photo-1556761175-129418cb2dfe?q=80&w=600", link:"upsc-epfo-eo-oa-services.html" },
+{ title:"CSE", sub:"Civil Services", tag:"UPSC", img:"rrb.png", link:"upsc-ias-ips-ifos-ifs-iaas-icas-icls-idas-ides-iis-ipos-iptafs-irs-income-tax-irs-customer-indirect-tax-irts-iras-irps-irsse-itrs-rpf-aghqcs-danics-danips-pcs-pps.html" },
+{ title:"ESE", sub:"Engg Services", tag:"UPSC", img:"rrb.png", link:"upsc-ese-ies-engineering-services-exam.html" },
+{ title:"IFoS", sub:"Forest Service", tag:"UPSC", img:"rrb.png", link:"upsc-ias-ips-ifos-ifs-iaas-icas-icls-idas-ides-iis-ipos-iptafs-irs-income-tax-irs-customer-indirect-tax-irts-iras-irps-irsse-itrs-rpf-aghqcs-danics-danips-pcs-pps.html" },
+{ title:"CDS", sub:"Defence", tag:"UPSC", img:"rrb.png", link:"ups-cds-combined-defence-dervices.html" },
+{ title:"NDA/NA", sub:"Defence Acad.", tag:"UPSC", img:"rrb.png", link:"upsc-nda-na-services.html" },
+{ title:"CMS", sub:"Medical", tag:"UPSC", img:"rrb.png", link:"upsc-cms-services.html" },
+{ title:"IES/ISS", sub:"Eco & Stats", tag:"UPSC", img:"rrb.png", link:"upsc-ies-iss-services.html" },
+{ title:"CAPF", sub:"Armed Police", tag:"UPSC", img:"rrb.png", link:"upsc-capf-services.html" },
+{ title:"EPFO", sub:"EO / AO", tag:"UPSC", img:"rrb.png", link:"upsc-epfo-eo-oa-services.html" },
 
 /* UPSC Railway via CSE */
-{ title:"IRTS", sub:"Rail Traffic", tag:"UPSC Rail", img:"https://images.unsplash.com/photo-1503376780353-7e6692767b70?q=80&w=600", link:"upsc-ias-ips-ifos-ifs-iaas-icas-icls-idas-ides-iis-ipos-iptafs-irs-income-tax-irs-customer-indirect-tax-irts-iras-irps-irsse-itrs-rpf-aghqcs-danics-danips-pcs-pps.html" },
-{ title:"SO Rail", sub:"Accounts/Stores", tag:"UPSC Rail", img:"https://images.unsplash.com/photo-1554224155-6726b3ff858f?q=80&w=600", link:"upsc-ias-ips-ifos-ifs-iaas-icas-icls-idas-ides-iis-ipos-iptafs-irs-income-tax-irs-customer-indirect-tax-irts-iras-irps-irsse-itrs-rpf-aghqcs-danics-danips-pcs-pps.html" },
+{ title:"IRTS", sub:"Rail Traffic", tag:"UPSC Rail", img:"rrb.png", link:"upsc-ias-ips-ifos-ifs-iaas-icas-icls-idas-ides-iis-ipos-iptafs-irs-income-tax-irs-customer-indirect-tax-irts-iras-irps-irsse-itrs-rpf-aghqcs-danics-danips-pcs-pps.html" },
+{ title:"SO Rail", sub:"Accounts/Stores", tag:"UPSC Rail", img:"rrb.png", link:"upsc-ias-ips-ifos-ifs-iaas-icas-icls-idas-ides-iis-ipos-iptafs-irs-income-tax-irs-customer-indirect-tax-irts-iras-irps-irsse-itrs-rpf-aghqcs-danics-danips-pcs-pps.html" },
 
 /* ===================== SSC ===================== */
 
-{ title:"CGL", sub:"Graduate Exam", tag:"SSC", img:"https://images.unsplash.com/photo-1523580846011-d3a5bc25702b?q=80&w=600", link:"ssc-combined-graduate-level-cgl-examination.html" },
-{ title:"CHSL", sub:"12th Exam", tag:"SSC", img:"https://images.unsplash.com/photo-1523050854058-8df90110c9f1?q=80&w=600", link:"ssc-combined-higher-secondary-level-chsl-examination.html" },
-{ title:"MTS", sub:"10th Staff", tag:"SSC", img:"https://images.unsplash.com/photo-1588072432836-e10032774350?q=80&w=600", link:"ssc-multi-tasking-staff-mts-examination.html" },
-{ title:"GD", sub:"Constable", tag:"SSC", img:"https://images.unsplash.com/photo-1603878463782-42d1d3d8c7f6?q=80&w=600", link:"ssc-general-duty-gd-constable-examination.html" },
-{ title:"JE", sub:"Junior Engg", tag:"SSC", img:"https://images.unsplash.com/photo-1581090700227-1e37b190418e?q=80&w=600", link:"ssc-junior-engineer-je-examination.html" },
-{ title:"JHT", sub:"Translator", tag:"SSC", img:"https://images.unsplash.com/photo-1517430816045-df4b7de11d1d?q=80&w=600", link:"ssc-junior-hindi-translator-jht-examination.html" },
-{ title:"Steno", sub:"Grade C/D", tag:"SSC", img:"https://images.unsplash.com/photo-1497032628192-86f99bcd76bc?q=80&w=600", link:"ssc-stenographer-grade-c-d-examination.html" },
-{ title:"CPO SI", sub:"Sub-Inspector", tag:"SSC", img:"https://images.unsplash.com/photo-1599940824399-b87987ceb72a?q=80&w=600", link:"ssc-central-police-organisation-cpo-si-examination.html" },
+{ title:"CGL", sub:"Graduate Exam", tag:"SSC", img:"rrb.png", link:"ssc-combined-graduate-level-cgl-examination.html" },
+{ title:"CHSL", sub:"12th Exam", tag:"SSC", img:"rrb.png", link:"ssc-combined-higher-secondary-level-chsl-examination.html" },
+{ title:"MTS", sub:"10th Staff", tag:"SSC", img:"rrb.png", link:"ssc-multi-tasking-staff-mts-examination.html" },
+{ title:"GD", sub:"Constable", tag:"SSC", img:"rrb.png", link:"ssc-general-duty-gd-constable-examination.html" },
+{ title:"JE", sub:"Junior Engg", tag:"SSC", img:"rrb.png", link:"ssc-junior-engineer-je-examination.html" },
+{ title:"JHT", sub:"Translator", tag:"SSC", img:"rrb.png", link:"ssc-junior-hindi-translator-jht-examination.html" },
+{ title:"Steno", sub:"Grade C/D", tag:"SSC", img:"rrb.png", link:"ssc-stenographer-grade-c-d-examination.html" },
+{ title:"CPO SI", sub:"Sub-Inspector", tag:"SSC", img:"rrb.png", link:"ssc-central-police-organisation-cpo-si-examination.html" },
 
 /* ===================== RRB / RRC ===================== */
 
-{ title:"NTPC", sub:"Non-Tech", tag:"RRB", img:"https://images.unsplash.com/photo-1529070538774-1843cb3265df?q=80&w=600", link:"rrb-ntpc-non-technical-categories-examination.html" },
-{ title:"JE", sub:"Rail Engg", tag:"RRB", img:"https://images.unsplash.com/photo-1581090700227-1e37b190418e?q=80&w=600", link:"rrb-je-junior-engineer-and-technical-examination.html" },
-{ title:"ALP", sub:"Loco Pilot", tag:"RRB", img:"https://images.unsplash.com/photo-1503376780353-7e6692767b70?q=80&w=600", link:"rrb-alp-assistant-loco-pilot-and-technician.html" },
-{ title:"Para", sub:"Paramedical", tag:"RRB", img:"https://images.unsplash.com/photo-1588776814546-1ffcf47267a5?q=80&w=600", link:"rrb-paramedical-staff-nurse-pharmacist-radiographer-lab-technician-helth-malaria-inspector.html" },
-{ title:"Mini", sub:"Ministerial", tag:"RRB", img:"https://images.unsplash.com/photo-1517430816045-df4b7de11d1d?q=80&w=600", link:"rrb-ministerial-and-isolated-categories.html" },
-{ title:"Group-D", sub:"Level-1", tag:"RRC", img:"https://images.unsplash.com/photo-1599940824399-b87987ceb72a?q=80&w=600", link:"rrb-group-d-level-one-exam.html" }
+{ title:"NTPC", sub:"Non-Tech", tag:"RRB", img:"rrb.png", link:"rrb-ntpc-non-technical-categories-examination.html" },
+{ title:"JE", sub:"Rail Engg", tag:"RRB", img:"rrb.png", link:"rrb-je-junior-engineer-and-technical-examination.html" },
+{ title:"ALP", sub:"Loco Pilot", tag:"RRB", img:"rrb.png", link:"rrb-alp-assistant-loco-pilot-and-technician.html" },
+{ title:"Para", sub:"Paramedical", tag:"RRB", img:"rrb.png", link:"rrb-paramedical-staff-nurse-pharmacist-radiographer-lab-technician-helth-malaria-inspector.html" },
+{ title:"Mini", sub:"Ministerial", tag:"RRB", img:"rrb.png", link:"rrb-ministerial-and-isolated-categories.html" },
+{ title:"Group-D", sub:"Level-1", tag:"RRC", img:"rrb.png", link:"rrb-group-d-level-one-exam.html" }
 
 ],
                 'IBPS Exam': [
