--- a/main.html
+++ b/main.html
@@ -738,14 +738,14 @@
     title: "IBPS PO",
     sub: "Probationary Officer",
     tag: "IBPS",
-    img: "https://images.unsplash.com/photo-1565372918673-cc5f8bfa0d31?q=80&w=600",
+    img: "ibps.png",
     link: "ibps-po-probationary-officer-clerk-exam.html"
   },
   {
     title: "IBPS Clerk",
     sub: "Clerical Cadre",
     tag: "IBPS",
-    img: "https://images.unsplash.com/photo-1520607162513-77705c0f0d4a?q=80&w=600",
+    img: "ibps.png",
     link: "ibps-po-probationary-officer-clerk-exam-two.html"
   },
 
@@ -755,28 +755,28 @@
     title: "RRB PO",
     sub: "Officer Scale-I",
     tag: "IBPS RRB",
-    img: "https://images.unsplash.com/photo-1556740749-887f6717d7e4?q=80&w=600",
+    img: "ibps.png",
     link: "ibps-rrb-officer-scale-i-assistant-manager-ibps-rrb-officer-scale-ii-manager-ibps-rrb-officer-scale-iii-senior-manager-ibps-rrb-office-assistant-multipurpose-clerk.html"
   },
   {
     title: "RRB Mgr",
     sub: "Officer Scale-II",
     tag: "IBPS RRB",
-    img: "https://images.unsplash.com/photo-1554224155-6726b3ff858f?q=80&w=600",
+    img: "ibps.png",
     link: "ibps-rrb-officer-scale-i-assistant-manager-ibps-rrb-officer-scale-ii-manager-ibps-rrb-officer-scale-iii-senior-manager-ibps-rrb-office-assistant-multipurpose-clerk.html"
   },
   {
     title: "RRB Sr Mgr",
     sub: "Officer Scale-III",
     tag: "IBPS RRB",
-    img: "https://images.unsplash.com/photo-1554224155-8d04cb21cd6c?q=80&w=600",
+    img: "ibps.png",
     link: "ibps-rrb-officer-scale-i-assistant-manager-ibps-rrb-officer-scale-ii-manager-ibps-rrb-officer-scale-iii-senior-manager-ibps-rrb-office-assistant-multipurpose-clerk.html"
   },
   {
     title: "RRB Clerk",
     sub: "Office Asst.",
     tag: "IBPS RRB",
-    img: "https://images.unsplash.com/photo-1521791136064-7986c2920216?q=80&w=600",
+    img: "ibps.png",
     link: "ibps-rrb-officer-scale-i-assistant-manager-ibps-rrb-officer-scale-ii-manager-ibps-rrb-officer-scale-iii-senior-manager-ibps-rrb-office-assistant-multipurpose-clerk.html"
   },
 
@@ -786,35 +786,35 @@
     title: "IT Officer",
     sub: "Scale-I",
     tag: "IBPS SO",
-    img: "https://images.unsplash.com/photo-1518779578993-ec3579fee39f?q=80&w=600",
+    img: "ibps.png",
     link: "ibps-so-it-officer-scale-i-agricultural-field-officer-scale-i-jbhasha-adhikari-scale-i-law-officer-scale-i-hr-personnel-officer-scale-i-marketing-officer-scale-i-exam.html"
   },
   {
     title: "Agri Officer",
     sub: "Scale-I",
     tag: "IBPS SO",
-    img: "https://images.unsplash.com/photo-1501004318641-b39e6451bec6?q=80&w=600",
+    img: "ibps.png",
     link: "ibps-so-it-officer-scale-i-agricultural-field-officer-scale-i-jbhasha-adhikari-scale-i-law-officer-scale-i-hr-personnel-officer-scale-i-marketing-officer-scale-i-exam.html"
   },
   {
     title: "Rajbhasha",
     sub: "Scale-I",
     tag: "IBPS SO",
-    img: "https://images.unsplash.com/photo-1517430816045-df4b7de11d1d?q=80&w=600",
+    img: "ibps.png",
     link: "ibps-so-it-officer-scale-i-agricultural-field-officer-scale-i-jbhasha-adhikari-scale-i-law-officer-scale-i-hr-personnel-officer-scale-i-marketing-officer-scale-i-exam.html"
   },
   {
     title: "Law Officer",
     sub: "Scale-I",
     tag: "IBPS SO",
-    img: "https://images.unsplash.com/photo-1555374018-13a8994ab246?q=80&w=600",
+    img: "ibps.png",
     link: "ibps-so-it-officer-scale-i-agricultural-field-officer-scale-i-jbhasha-adhikari-scale-i-law-officer-scale-i-hr-personnel-officer-scale-i-marketing-officer-scale-i-exam.html"
   },
   {
     title: "Marketing",
     sub: "Scale-I",
     tag: "IBPS SO",
-    img: "https://images.unsplash.com/photo-1556761175-129418cb2dfe?q=80&w=600",
+    img: "ibps.png",
     link: "ibps-so-it-officer-scale-i-agricultural-field-officer-scale-i-jbhasha-adhikari-scale-i-law-officer-scale-i-hr-personnel-officer-scale-i-marketing-officer-scale-i-exam.html"
   }
 ],
@@ -825,21 +825,21 @@
     title: "RBI Gr-B Gen",
     sub: "General (DR)",
     tag: "RBI",
-    img: "https://images.unsplash.com/photo-1565372918673-cc5f8bfa0d31?q=80&w=600",
+    img: "rbi.png",
     link: "rbi-grade-b-dr-general-rbi-grade-b-dr-depr-department-of-economic-and-policy-research-rbi-grade-b-dr-dsim-department-of-statistics-and-information-management.html"
   },
   {
     title: "RBI Gr-B DEPR",
     sub: "Eco & Policy",
     tag: "RBI",
-    img: "https://images.unsplash.com/photo-1554224155-6726b3ff858f?q=80&w=600",
+    img: "rbi.png",
     link: "rbi-grade-b-dr-general-rbi-grade-b-dr-depr-department-of-economic-and-policy-research-rbi-grade-b-dr-dsim-department-of-statistics-and-information-management.html"
   },
   {
     title: "RBI Gr-B DSIM",
     sub: "Statistics",
     tag: "RBI",
-    img: "https://images.unsplash.com/photo-1581091215367-59ab6c33f8d8?q=80&w=600",
+    img: "rbi.png",
     link: "rbi-grade-b-dr-general-rbi-grade-b-dr-depr-department-of-economic-and-policy-research-rbi-grade-b-dr-dsim-department-of-statistics-and-information-management.html"
   },
 
@@ -849,14 +849,14 @@
     title: "RBI Gr-A Raj",
     sub: "Rajbhasha",
     tag: "RBI",
-    img: "https://images.unsplash.com/photo-1517430816045-df4b7de11d1d?q=80&w=600",
+    img: "rbi.png",
     link: "rbi-grade-a-officer-assistant-manager-level.html"
   },
   {
     title: "RBI Gr-A PS",
     sub: "Protocol & Sec.",
     tag: "RBI",
-    img: "https://images.unsplash.com/photo-1599940824399-b87987ceb72a?q=80&w=600",
+    img: "rbi.png",
     link: "rbi-grade-a-officer-assistant-manager-level.html"
   },
 
@@ -866,7 +866,7 @@
     title: "RBI Asst.",
     sub: "Clerk",
     tag: "RBI",
-    img: "https://images.unsplash.com/photo-1521791136064-7986c2920216?q=80&w=600",
+    img: "rbi.png",
     link: "rbi-assistant-clerical-level.html"
   },
 
@@ -876,35 +876,35 @@
     title: "RBI Legal",
     sub: "Grade B",
     tag: "RBI Spec.",
-    img: "https://images.unsplash.com/photo-1555374018-13a8994ab246?q=80&w=600",
+    img: "rbi.png",
     link: "rbi-specialist-technical-posts-exam-guide.html"
   },
   {
     title: "RBI Tech Mgr",
     sub: "Civil / Elec.",
     tag: "RBI Spec.",
-    img: "https://images.unsplash.com/photo-1581090700227-1e37b190418e?q=80&w=600",
+    img: "rbi.png",
     link: "rbi-specialist-technical-posts-exam-guide.html"
   },
   {
     title: "RBI Librarian",
     sub: "Grade A",
     tag: "RBI Spec.",
-    img: "https://images.unsplash.com/photo-1524995997946-a1c2e315a42f?q=80&w=600",
+    img: "rbi.png",
     link: "rbi-specialist-technical-posts-exam-guide.html"
   },
   {
     title: "RBI Curator",
     sub: "Grade A",
     tag: "RBI Spec.",
-    img: "https://images.unsplash.com/photo-1529070538774-1843cb3265df?q=80&w=600",
+    img: "rbi.png",
     link: "rbi-specialist-technical-posts-exam-guide.html"
   },
   {
     title: "RBI IT",
     sub: "IT / Data",
     tag: "RBI Spec.",
-    img: "https://images.unsplash.com/photo-1518779578993-ec3579fee39f?q=80&w=600",
+    img: "rbi.png",
     link: "rbi-specialist-technical-posts-exam-guide.html"
   },
 
@@ -914,21 +914,21 @@
     title: "RBI Cons. IT",
     sub: "IT Consultant",
     tag: "RBI Contract",
-    img: "https://images.unsplash.com/photo-1518779578993-ec3579fee39f?q=80&w=600",
+    img: "rbi.png",
     link: "rbi-consultant--fintech-it-risk.html"
   },
   {
     title: "RBI Cons. Fin",
     sub: "FinTech",
     tag: "RBI Contract",
-    img: "https://images.unsplash.com/photo-1556761175-129418cb2dfe?q=80&w=600",
+    img: "rbi.png",
     link: "rbi-consultant--fintech-it-risk.html"
   },
   {
     title: "RBI Cons. Risk",
     sub: "Risk Mgmt",
     tag: "RBI Contract",
-    img: "https://images.unsplash.com/photo-1554224155-6726b3ff858f?q=80&w=600",
+    img: "rbi.png",
     link: "rbi-consultant--fintech-it-risk.html"
   }
 ],
