--- a/main.html
+++ b/main.html
@@ -1154,14 +1154,14 @@
     title: "CBSE 10",
     sub: "Class 10 Board",
     tag: "Board",
-    img: "https://images.unsplash.com/photo-1523050854058-8df90110c9f1?q=80&w=600",
+    img: "districtsexam.png",
     link: "school-level-board-examinations.html"
   },
   {
     title: "CBSE 12",
     sub: "Class 12 Board",
     tag: "Board",
-    img: "https://images.unsplash.com/photo-1523050854058-8df90110c9f1?q=80&w=600",
+    img: "districtsexam.png",
     link: "school-level-board-examinations.html"
   },
 
@@ -1171,7 +1171,7 @@
     title: "CTET",
     sub: "Teacher Eligibility",
     tag: "Teacher",
-    img: "https://images.unsplash.com/photo-1513258496099-48168024aec0?q=80&w=600",
+    img: "districtsexam.png",
     link: "ctet.html"
   },
 
@@ -1181,35 +1181,35 @@
     title: "NEET-UG",
     sub: "Medical UG",
     tag: "NTA",
-    img: "https://images.unsplash.com/photo-1588776814546-1ffcf47267a5?q=80&w=600",
+    img: "districtsexam.png",
     link: "medical-neet-ug-pg-neet-mds.html"
   },
   {
     title: "JEE Main",
     sub: "Engg Entry",
     tag: "NTA",
-    img: "https://images.unsplash.com/photo-1581090700227-1e37b190418e?q=80&w=600",
+    img: "districtsexam.png",
     link: "engineering-entrance-exams-guide.html"
   },
   {
     title: "UGC NET",
     sub: "Lecturer",
     tag: "NTA",
-    img: "https://images.unsplash.com/photo-1517430816045-df4b7de11d1d?q=80&w=600",
+    img: "districtsexam.png",
     link: "professional-certification-exams.html"
   },
   {
     title: "CMAT",
     sub: "MBA Entry",
     tag: "NTA",
-    img: "https://images.unsplash.com/photo-1556761175-129418cb2dfe?q=80&w=600",
+    img: "districtsexam.png",
     link: "professional-certification-exams.html"
   },
   {
     title: "GPAT",
     sub: "Pharmacy",
     tag: "NTA",
-    img: "https://images.unsplash.com/photo-1588776814546-1ffcf47267a5?q=80&w=600",
+    img: "districtsexam.png",
     link: "professional-certification-exams.html"
   }
 ],
@@ -1217,39 +1217,39 @@
 'State Edu exam': [
   /* ===================== STATE BOARDS ===================== */
 
-  { title:"UP Board", sub:"Class 10 & 12", tag:"Board", img:"https://images.unsplash.com/photo-1523050854058-8df90110c9f1?q=80&w=600", link:"up-board.html" },
-  { title:"BSEB", sub:"Bihar Board", tag:"Board", img:"https://images.unsplash.com/photo-1523050854058-8df90110c9f1?q=80&w=600", link:"bihar-board.html" },
-  { title:"RBSE", sub:"Rajasthan Board", tag:"Board", img:"https://images.unsplash.com/photo-1523050854058-8df90110c9f1?q=80&w=600", link:"rajasthan-board.html" },
-  { title:"MPBSE", sub:"MP Board", tag:"Board", img:"https://images.unsplash.com/photo-1523050854058-8df90110c9f1?q=80&w=600", link:"mp-board.html" },
-  { title:"HBSE", sub:"Haryana Board", tag:"Board", img:"https://images.unsplash.com/photo-1523050854058-8df90110c9f1?q=80&w=600", link:"haryana-board.html" },
-  { title:"PSEB", sub:"Punjab Board", tag:"Board", img:"https://images.unsplash.com/photo-1523050854058-8df90110c9f1?q=80&w=600", link:"punjab-board.html" },
-  { title:"MSBSHSE", sub:"Maharashtra Board", tag:"Board", img:"https://images.unsplash.com/photo-1523050854058-8df90110c9f1?q=80&w=600", link:"maharashtra-board.html" },
-  { title:"GSEB", sub:"Gujarat Board", tag:"Board", img:"https://images.unsplash.com/photo-1523050854058-8df90110c9f1?q=80&w=600", link:"gujarat-board.html" },
-  { title:"WB Board", sub:"WB 10/12", tag:"Board", img:"https://images.unsplash.com/photo-1523050854058-8df90110c9f1?q=80&w=600", link:"west-bengal-board.html" },
-  { title:"Odisha Bd", sub:"BSE / CHSE", tag:"Board", img:"https://images.unsplash.com/photo-1523050854058-8df90110c9f1?q=80&w=600", link:"odisha-board.html" },
-  { title:"TN Board", sub:"TN 10/12", tag:"Board", img:"https://images.unsplash.com/photo-1523050854058-8df90110c9f1?q=80&w=600", link:"tamilnadu-board.html" },
-  { title:"Kerala Bd", sub:"Kerala Board", tag:"Board", img:"https://images.unsplash.com/photo-1523050854058-8df90110c9f1?q=80&w=600", link:"kerala-board.html" },
-  { title:"KSEEB", sub:"Karnataka Bd", tag:"Board", img:"https://images.unsplash.com/photo-1523050854058-8df90110c9f1?q=80&w=600", link:"karnataka-board.html" },
+  { title:"UP Board", sub:"Class 10 & 12", tag:"Board", img:"districtsexam.png", link:"up-board.html" },
+  { title:"BSEB", sub:"Bihar Board", tag:"Board", img:"districtsexam.png", link:"bihar-board.html" },
+  { title:"RBSE", sub:"Rajasthan Board", tag:"Board", img:"districtsexam.png", link:"rajasthan-board.html" },
+  { title:"MPBSE", sub:"MP Board", tag:"Board", img:"districtsexam.png", link:"mp-board.html" },
+  { title:"HBSE", sub:"Haryana Board", tag:"Board", img:"districtsexam.png", link:"haryana-board.html" },
+  { title:"PSEB", sub:"Punjab Board", tag:"Board", img:"districtsexam.png", link:"punjab-board.html" },
+  { title:"MSBSHSE", sub:"Maharashtra Board", tag:"Board", img:"districtsexam.png", link:"maharashtra-board.html" },
+  { title:"GSEB", sub:"Gujarat Board", tag:"Board", img:"districtsexam.png", link:"gujarat-board.html" },
+  { title:"WB Board", sub:"WB 10/12", tag:"Board", img:"districtsexam.png", link:"west-bengal-board.html" },
+  { title:"Odisha Bd", sub:"BSE / CHSE", tag:"Board", img:"districtsexam.png", link:"odisha-board.html" },
+  { title:"TN Board", sub:"TN 10/12", tag:"Board", img:"districtsexam.png", link:"tamilnadu-board.html" },
+  { title:"Kerala Bd", sub:"Kerala Board", tag:"Board", img:"districtsexam.png", link:"kerala-board.html" },
+  { title:"KSEEB", sub:"Karnataka Bd", tag:"Board", img:"districtsexam.png", link:"karnataka-board.html" },
 
   /* ===================== STATE PSC (MIXED IN LIST) ===================== */
 
-  { title:"KPSC (KL)", sub:"Kerala PSC", tag:"State PSC", img:"https://images.unsplash.com/photo-1529070538774-1843cb3265df?q=80&w=600", link:"kpsckrla.html" },
-  { title:"TPSC", sub:"Tripura PSC", tag:"State PSC", img:"https://images.unsplash.com/photo-1529070538774-1843cb3265df?q=80&w=600", link:"tpsc.html" },
-  { title:"APPSC", sub:"Andhra PSC", tag:"State PSC", img:"https://images.unsplash.com/photo-1529070538774-1843cb3265df?q=80&w=600", link:"appsc.html" },
-  { title:"TSPSC", sub:"Telangana PSC", tag:"State PSC", img:"https://images.unsplash.com/photo-1529070538774-1843cb3265df?q=80&w=600", link:"tspsc.html" },
-  { title:"Manipur PSC", sub:"Manipur PSC", tag:"State PSC", img:"https://images.unsplash.com/photo-1529070538774-1843cb3265df?q=80&w=600", link:"manipur-psc.html" },
-  { title:"Meghalaya PSC", sub:"Meghalaya PSC", tag:"State PSC", img:"https://images.unsplash.com/photo-1529070538774-1843cb3265df?q=80&w=600", link:"meghalaya-psc.html" },
-  { title:"Mizoram PSC", sub:"Mizoram PSC", tag:"State PSC", img:"https://images.unsplash.com/photo-1529070538774-1843cb3265df?q=80&w=600", link:"mizoram-psc.html" },
-  { title:"Nagaland PSC", sub:"Nagaland PSC", tag:"State PSC", img:"https://images.unsplash.com/photo-1529070538774-1843cb3265df?q=80&w=600", link:"nagaland-psc.html" },
-  { title:"Sikkim PSC", sub:"Sikkim PSC", tag:"State PSC", img:"https://images.unsplash.com/photo-1529070538774-1843cb3265df?q=80&w=600", link:"sikkim-psc.html" },
-  { title:"Arunachal PSC", sub:"Arunachal PSC", tag:"State PSC", img:"https://images.unsplash.com/photo-1529070538774-1843cb3265df?q=80&w=600", link:"arunachal-pradesh-psc.html" },
-  { title:"PPSC", sub:"Punjab PSC", tag:"State PSC", img:"https://images.unsplash.com/photo-1529070538774-1843cb3265df?q=80&w=600", link:"punjab-psc.html" },
+  { title:"KPSC (KL)", sub:"Kerala PSC", tag:"State PSC", img:"districtsexam.png", link:"kpsckrla.html" },
+  { title:"TPSC", sub:"Tripura PSC", tag:"State PSC", img:"districtsexam.png", link:"tpsc.html" },
+  { title:"APPSC", sub:"Andhra PSC", tag:"State PSC", img:"districtsexam.png", link:"appsc.html" },
+  { title:"TSPSC", sub:"Telangana PSC", tag:"State PSC", img:"districtsexam.png", link:"tspsc.html" },
+  { title:"Manipur PSC", sub:"Manipur PSC", tag:"State PSC", img:"districtsexam.png", link:"manipur-psc.html" },
+  { title:"Meghalaya PSC", sub:"Meghalaya PSC", tag:"State PSC", img:"districtsexam.png", link:"meghalaya-psc.html" },
+  { title:"Mizoram PSC", sub:"Mizoram PSC", tag:"State PSC", img:"districtsexam.png", link:"mizoram-psc.html" },
+  { title:"Nagaland PSC", sub:"Nagaland PSC", tag:"State PSC", img:"districtsexam.png", link:"nagaland-psc.html" },
+  { title:"Sikkim PSC", sub:"Sikkim PSC", tag:"State PSC", img:"districtsexam.png", link:"sikkim-psc.html" },
+  { title:"Arunachal PSC", sub:"Arunachal PSC", tag:"State PSC", img:"districtsexam.png", link:"arunachal-pradesh-psc.html" },
+  { title:"PPSC", sub:"Punjab PSC", tag:"State PSC", img:"districtsexam.png", link:"punjab-psc.html" },
 
   /* ===================== OTHER STATE EXAMS ===================== */
 
-  { title:"State TET", sub:"Teacher Eligibility", tag:"State", img:"https://images.unsplash.com/photo-1513258496099-48168024aec0?q=80&w=600", link:"state-tet.html" },
-  { title:"Scholarship", sub:"State Awards", tag:"State", img:"https://images.unsplash.com/photo-1523050854058-8df90110c9f1?q=80&w=600", link:"state-scholarship.html" },
-  { title:"State Entry", sub:"Entrance Exams", tag:"State", img:"https://images.unsplash.com/photo-1581090700227-1e37b190418e?q=80&w=600", link:"entrance-exams.html" }
+  { title:"State TET", sub:"Teacher Eligibility", tag:"State", img:"districtsexam.png", link:"state-tet.html" },
+  { title:"Scholarship", sub:"State Awards", tag:"State", img:"districtsexam.png", link:"state-scholarship.html" },
+  { title:"State Entry", sub:"Entrance Exams", tag:"State", img:"districtsexam.png", link:"entrance-exams.html" }
 ],
                 'kvs/nvs Exam': [
   /* ===================== KVS ===================== */
@@ -1258,42 +1258,42 @@
     title: "KVS Principal",
     sub: "School Head",
     tag: "KVS",
-    img: "https://images.unsplash.com/photo-1523050854058-8df90110c9f1?q=80&w=600",
+    img: "kvsnvs.png",
     link: "kvs.html"
   },
   {
     title: "KVS VP",
     sub: "Vice Principal",
     tag: "KVS",
-    img: "https://images.unsplash.com/photo-1513258496099-48168024aec0?q=80&w=600",
+    img: "kvsnvs.png",
     link: "kvs.html"
   },
   {
     title: "KVS PGT",
     sub: "PG Teacher",
     tag: "KVS",
-    img: "https://images.unsplash.com/photo-1513258496099-48168024aec0?q=80&w=600",
+    img: "kvsnvs.png",
     link: "kvs.html"
   },
   {
     title: "KVS TGT",
     sub: "Graduate Teacher",
     tag: "KVS",
-    img: "https://images.unsplash.com/photo-1513258496099-48168024aec0?q=80&w=600",
+    img: "kvsnvs.png",
     link: "kvs.html"
   },
   {
     title: "KVS PRT",
     sub: "Primary Teacher",
     tag: "KVS",
-    img: "https://images.unsplash.com/photo-1513258496099-48168024aec0?q=80&w=600",
+    img: "kvsnvs.png",
     link: "kvs.html"
   },
   {
     title: "KVS Non-Tech",
     sub: "Clerk/Asst.",
     tag: "KVS",
-    img: "https://images.unsplash.com/photo-1521791136064-7986c2920216?q=80&w=600",
+    img: "kvsnvs.png",
     link: "kvs.html"
   },
 
@@ -1303,42 +1303,42 @@
     title: "NVS Principal",
     sub: "School Head",
     tag: "NVS",
-    img: "https://images.unsplash.com/photo-1523050854058-8df90110c9f1?q=80&w=600",
+    img: "kvsnvs.png",
     link: "nvs-exa.html"
   },
   {
     title: "NVS VP",
     sub: "Vice Principal",
     tag: "NVS",
-    img: "https://images.unsplash.com/photo-1513258496099-48168024aec0?q=80&w=600",
+    img: "kvsnvs.png",
     link: "nvs-exa.html"
   },
   {
     title: "NVS PGT",
     sub: "PG Teacher",
     tag: "NVS",
-    img: "https://images.unsplash.com/photo-1513258496099-48168024aec0?q=80&w=600",
+    img: "kvsnvs.png",
     link: "nvs-exa.html"
   },
   {
     title: "NVS TGT",
     sub: "Graduate Teacher",
     tag: "NVS",
-    img: "https://images.unsplash.com/photo-1513258496099-48168024aec0?q=80&w=600",
+    img: "kvsnvs.png",
     link: "nvs-exa.html"
   },
   {
     title: "NVS Misc",
     sub: "Art/Music/PET",
     tag: "NVS",
-    img: "https://images.unsplash.com/photo-1513258496099-48168024aec0?q=80&w=600",
+    img: "kvsnvs.png",
     link: "nvs-exa.html"
   },
   {
     title: "NVS Non-Tech",
     sub: "Clerk/Nurse",
     tag: "NVS",
-    img: "https://images.unsplash.com/photo-1521791136064-7986c2920216?q=80&w=600",
+    img: "kvsnvs.png",
     link: "nvs-exa.html"
   },
 
@@ -1348,21 +1348,21 @@
     title: "JNVST 6",
     sub: "Class 6 Entry",
     tag: "JNVST",
-    img: "https://images.unsplash.com/photo-1523050854058-8df90110c9f1?q=80&w=600",
+    img: "kvsnvs.png",
     link: "jnvst.html"
   },
   {
     title: "JNVST 9",
     sub: "Class 9 Entry",
     tag: "JNVST",
-    img: "https://images.unsplash.com/photo-1523050854058-8df90110c9f1?q=80&w=600",
+    img: "kvsnvs.png",
     link: "jnvst.html"
   },
   {
     title: "JNVST 11",
     sub: "Class 11 Entry",
     tag: "JNVST",
-    img: "https://images.unsplash.com/photo-1523050854058-8df90110c9f1?q=80&w=600",
+    img: "kvsnvs.png",
     link: "jnvst.html"
   }
 ],
