--- a/main.html
+++ b/main.html
@@ -2705,281 +2705,100 @@
 
 
              ai: {
-                'OpenAI':[
+                'ALL AI TOOLS': [
+  
   {
-    title: "GPT-4.5",
-    sub: "o-Series Models",
+    title: "ChatGPT",
+    sub: "AI Chat Assistant",
     tag: "AI",
-    img: "openai.png",
-    link: "gpt-4.5.html"
-  },
-  {
-    title: "Codex",
-    sub: "Code Generation",
-    tag: "AI",
-    img: "openai.png",
-    link: "codex.html"
-  },
-  {
-    title: "Whisper",
-    sub: "Speech to Text",
-    tag: "AI",
-    img: "openai.png",
-    link: "whisper.html"
-  },
-  {
-    title: "DALL·E 3",
-    sub: "Image Generation",
-    tag: "AI",
-    img: "openai.png",
-    link: "dalle-3.html"
-  },
-  {
-    title: "Sora",
-    sub: "Video Generation",
-    tag: "AI",
-    img: "openai.png",
-    link: "sora.html"
-  }
-],
-
- 'Anthropic':[
-  {
-    title: "Claude 2",
-    sub: "General AI Model",
-    tag: "AI",
-    img: "anthropic.png",
-    link: "claude-2.html"
+    img: "https://upload.wikimedia.org/wikipedia/commons/0/04/ChatGPT_logo.svg",
+    link: "https://chat.openai.com/"
   },
   {
     title: "Claude 3",
-    sub: "Opus · Sonnet · Haiku",
+    sub: "Anthropic AI",
     tag: "AI",
-    img: "anthropic.png",
-    link: "claude-3.html"
+    img: "https://avatars.githubusercontent.com/u/49796472?s=200&v=4",
+    link: "https://claude.ai/"
   },
-  {
-    title: "Claude 3.7",
-    sub: "Advanced Reasoning",
-    tag: "AI",
-    img: "anthropic.png",
-    link: "claude-3.7.html"
-  }
-], 
-
-
-'Google':[
   {
     title: "Gemini",
-    sub: "2.0 / 2.5 / Ultra / Pro / Nano",
+    sub: "Google AI",
     tag: "AI",
-    img: "gemini.png",
-    link: "gemini.html"
+    img: "https://upload.wikimedia.org/wikipedia/commons/3/3c/Google_Gemini_logo.svg",
+    link: "https://gemini.google.com/"
   },
   {
-    title: "Gato",
-    sub: "Generalist Agent",
+    title: "Microsoft Copilot",
+    sub: "AI Assistant",
     tag: "AI",
-    img: "gato.png",
-    link: "gato.html"
+    img: "https://upload.wikimedia.org/wikipedia/commons/9/9f/Microsoft_Copilot_Logo.svg",
+    link: "https://copilot.microsoft.com/"
   },
   {
-    title: "SIMA",
-    sub: "Simulation Agent",
+    title: "Midjourney",
+    sub: "AI Image Generator",
     tag: "AI",
-    img: "sima.png",
-    link: "sima.html"
-  }
-],
-
-
-'Meta':[
-  {
-    title: "LLaMA 2",
-    sub: "Meta LLM",
-    tag: "AI",
-    img: "meta.png",
-    link: "llama-2.html"
+    img: "https://seeklogo.com/images/M/midjourney-logo-0C0F3E51C3-seeklogo.com.png",
+    link: "https://www.midjourney.com/"
   },
   {
-    title: "LLaMA 3.2",
-    sub: "Vision Model",
+    title: "DALL·E",
+    sub: "AI Image Creator",
     tag: "AI",
-    img: "meta.png",
-    link: "llama-3.2.html"
+    img: "https://seeklogo.com/images/D/dall-e-logo-7C2C5E6E3C-seeklogo.com.png",
+    link: "https://openai.com/dall-e"
   },
   {
-    title: "LLaMA 4",
-    sub: "Upcoming Model",
+    title: "Leonardo AI",
+    sub: "AI Art Tool",
     tag: "AI",
-    img: "meta.png",
-    link: "llama-4.html"
-  }
-],
-
-'Mistral':[
-  {
-    title: "Mixtral",
-    sub: "MoE LLM",
-    tag: "AI",
-    img: "mistral.png",
-    link: "mixtral.html"
+    img: "https://leonardo.ai/favicon.ico",
+    link: "https://leonardo.ai/"
   },
   {
-    title: "Mistral Small",
-    sub: "Compact LLM",
+    title: "Runway",
+    sub: "AI Video Generator",
     tag: "AI",
-    img: "mistral.png",
-    link: "mistral-small.html"
+    img: "https://seeklogo.com/images/R/runway-logo-52C5E1A9F4-seeklogo.com.png",
+    link: "https://runwayml.com/"
   },
   {
-    title: "Magistral",
-    sub: "Advanced LLM",
+    title: "Pika",
+    sub: "AI Video Tool",
     tag: "AI",
-    img: "mistral.png",
-    link: "magistral.html"
-  }
-],
-
-'deepseek':[
-  {
-    title: "R1",
-    sub: "Reasoning Model",
-    tag: "AI",
-    img: "ai.png",
-    link: "r1.html"
-  },
-  {
-    title: "DeepSeek-V3",
-    sub: "LLM Variants",
-    tag: "AI",
-    img: "deepseek.png",
-    link: "deepseek-v3.html"
-  }
-],
-
-'amazon':[
-  {
-    title: "Nova Micro",
-    sub: "Lightweight Model",
-    tag: "AI",
-    img: "nova.png",
-    link: "nova-micro.html"
-  },
-  {
-    title: "Lite",
-    sub: "Fast & Efficient",
-    tag: "AI",
-    img: "lite.png",
-    link: "lite.html"
-  },
-  {
-    title: "Pro",
-    sub: "Text / Image / Video",
-    tag: "AI",
-    img: "pro.png",
-    link: "pro.html"
-  }
-],
-
-'grok ai':[
-  {
-  title: "Qwen 2.5",
-  sub: "Dense & MoE",
-  tag: "AI",
-  img: "qwen.png",
-  link: "qwen-2.5.html"
-}
-],
-
-'Perplexity AI':[
-  {
-    title: "Conversational Search",
-    sub: "AI Search Engine",
-    tag: "AI",
-    img: "perplexity.png",
-    link: "perplexity-search.html"
-  },
-  {
-    title: "Copilot Mode",
-    sub: "GPT-4 Powered",
-    tag: "AI",
-    img: "perplexity.png",
-    link: "perplexity-copilot.html"
-  },
-  {
-    title: "API Access",
-    sub: "Developer Integration",
-    tag: "API",
-    img: "perplexity.png",
-    link: "perplexity-api.html"
-  }
-],
-
-'AI Utilities & Tools':[
-  {
-    title: "GeneratePrompt.ai",
-    sub: "Prompt Generator",
-    tag: "AI Tool",
-    img: "prompt.png",
-    link: "generate-prompt-ai.html"
-  },
-  {
-    title: "Midjourney Helper",
-    sub: "Image Prompt Tool",
-    tag: "AI Tool",
-    img: "midjourney.png",
-    link: "midjourney-prompt-helper.html"
-  },
-  {
-    title: "PromptPerfect",
-    sub: "Prompt Optimizer",
-    tag: "AI Tool",
-    img: "promptperfect.png",
-    link: "prompt-perfect.html"
-  },
-  {
-    title: "RunwayML",
-    sub: "AI Video Tools",
-    tag: "Video AI",
-    img: "runway.png",
-    link: "runway-ml.html"
+    img: "https://pika.art/favicon.ico",
+    link: "https://pika.art/"
   },
   {
     title: "ElevenLabs",
-    sub: "AI Voice Generation",
-    tag: "Audio AI",
-    img: "elevenlabs.png",
-    link: "elevenlabs-ai.html"
+    sub: "AI Voice Generator",
+    tag: "AI",
+    img: "https://seeklogo.com/images/E/elevenlabs-logo-5A92F0C7C3-seeklogo.com.png",
+    link: "https://elevenlabs.io/"
   },
   {
-    title: "Synthesia",
-    sub: "AI Video Avatars",
-    tag: "Video AI",
-    img: "synthesia.png",
-    link: "synthesia-ai.html"
-  }
-],
-
-'Others':[
-  {
-    title: "Minimax",
-    sub: "Multimodal AI",
+    title: "Perplexity AI",
+    sub: "AI Search Engine",
     tag: "AI",
-    img: "minimax.png",
-    link: "generate-prompt-ai.html"
+    img: "https://seeklogo.com/images/P/perplexity-ai-logo-3B2F8E0E5B-seeklogo.com.png",
+    link: "https://www.perplexity.ai/"
   },
   {
-    title: "Pixtral",
-    sub: "Vision Language Model",
+    title: "Notion AI",
+    sub: "AI Productivity Tool",
     tag: "AI",
-    img: "pixtral.png",
-    link: "midjourney-prompt-helper.html"
+    img: "https://upload.wikimedia.org/wikipedia/commons/4/45/Notion_app_logo.png",
+    link: "https://www.notion.so/product/ai"
+  },
+  {
+    title: "DeepSeek",
+    sub: "AI Reasoning Model",
+    tag: "AI",
+    img: "https://avatars.githubusercontent.com/u/166817244?s=200&v=4",
+    link: "https://www.deepseek.com/"
   }
 ]
-
-
-
             }
         };
 
