--- a/upsc-ias-ips-ifos-ifs-iaas-icas-icls-idas-ides-iis-ipos-iptafs-irs-income-tax-irs-customer-indirect-tax-irts-iras-irps-irsse-itrs-rpf-aghqcs-danics-danips-pcs-pps.html
+++ b/upsc-ias-ips-ifos-ifs-iaas-icas-icls-idas-ides-iis-ipos-iptafs-irs-income-tax-irs-customer-indirect-tax-irts-iras-irps-irsse-itrs-rpf-aghqcs-danics-danips-pcs-pps.html
@@ -315,10 +315,10 @@
     <div class="iphone-dock-wrapper">
         <nav class="iphone-dock">
             <div class="nav-item active" id="nav-profile" onclick="activateTab(this, 'profile')">
-                <div class="icon-box"><i class="fas fa-user-circle"></i></div><span>Profile</span>
+                <div class="icon-box"><i class="fas fa-user-circle"></i></div><span></span>
             </div>
             <div class="nav-item locked" id="nav-flats" onclick="activateTab(this, 'flats')">
-                <div class="icon-box"><i class="fas fa-book"></i></div><span>Prep</span>
+                <div class="icon-box"><i class="fas fa-book"></i></div><span></span>
             </div>
             
             <div class="nav-item upsc-tab locked" id="nav-upsc" onclick="activateTab(this, 'upsc')">
@@ -326,10 +326,10 @@
             </div>
             
             <div class="nav-item locked" id="nav-pyq" onclick="activateTab(this, 'pyq')">
-                <div class="icon-box"><i class="fas fa-file-alt"></i></div><span>PYQ</span>
+                <div class="icon-box"><i class="fas fa-file-alt"></i></div><span></span>
             </div>
             <div class="nav-item locked" id="nav-news" onclick="activateTab(this, 'news')">
-                <div class="icon-box"><i class="fas fa-newspaper"></i></div><span>News</span>
+                <div class="icon-box"><i class="fas fa-newspaper"></i></div><span></span>
             </div>
         </nav>
     </div>
