--- a/upsc-special-class-railway-apprentice-scra-services.html
+++ b/upsc-special-class-railway-apprentice-scra-services.html
@@ -223,7 +223,7 @@
         <nav class="iphone-dock">
             <div class="nav-item active">
                 <div class="icon-box"><i class="fas fa-shield-alt"></i></div>
-                <span>NDA Guide</span>
+                <span>SCRA</span>
             </div>
         </nav>
     </div>
